# python-baseapp

./: .gitignore  .pre-commit-config.yaml  LICENSE  MOBILE_RESPONSIVENESS_PROMPT.md  README.md  fix.sh  init.sh  lint.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
backend/: requirements.txt
backend/src/: library.py  main.py
backend/tests/: conftest.py
backend/tests/integration/: test_app.py
backend/tests/unit/: test_config.py  test_logging.py
frontend/: eslint.config.js  index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
src/: library.py  main.py
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_config.py
